force-app/main/default/objects/MZ_ColorMatching__c/MZ_ColorMatching__c.object-meta.xml
<CustomObject>
    <label>カラーマッチング</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>カラーマッチングID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>カラーマッチング</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>