force-app/main/default/objects/MZ_ColorMatching__c/fields/MZ_Color1__c.field-meta.xml
<CustomField>
    <fullName>MZ_Color1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>カラー1</label>
    <referenceTo>MZ_Color__c</referenceTo>
    <relationshipLabel>カラーマッチング（カラー1）</relationshipLabel>
    <relationshipName>MZ_ColorMatchings1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>