force-app/main/default/objects/MZ_ColorMatching__c/fields/MZ_Color2__c.field-meta.xml
<CustomField>
    <fullName>MZ_Color2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>カラー2</label>
    <referenceTo>MZ_Color__c</referenceTo>
    <relationshipLabel>カラーマッチング (カラー2)</relationshipLabel>
    <relationshipName>MZ_ColorMatchings2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>