force-app/main/default/objects/MZ_ColorMatching__c/fields/MZ_MatchingScore__c.field-meta.xml
<CustomField>
    <fullName>MZ_MatchingScore__c</fullName>
    <label>マッチングスコア</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>