force-app/main/default/objects/MZ_ColorMatching__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MZ_Color1__c</columns>
    <columns>MZ_Color2__c</columns>
    <columns>MZ_MatchingScore__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>